--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -1,62 +1,116 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-  <title>Great Idea!</title>
+    <title>Great Idea!</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
   <body>
+    <div class="container">
+      <header>
+        <nav>
+          <a href="index.html">Services</a>
+          <a href="index.html">Product</a>
+          <a href="index.html">Vision</a>
+          <a href="index.html">Features</a>
+          <a href="index.html">About</a>
+          <a href="index.html">Contact</a>
+          <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+        </nav>
+      </header>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+      <!-- End of Header -->
+      <section class="top">
+        <section class="innovation">
+          <h1>
+            Innovation
+            <br>On
+            <br>Demand
+          </h1>
+          <div>Get Started</div>
+        </section>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
+        <div class="top-img">
+          <img src="img/header-img.png" alt="Image of a code snippet.">
+        </div>
+      </section>
 
-  Get Started
+      <!-- End of Top section -->
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+      <section class="main-container">
+        <section class="top-mid">
+          <section class="text-box">
+            <h2>Features</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm 
+              nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </section>
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+          <section class="text-box">
+            <h2>About</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm 
+              nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </section>
+        </section>
 
+        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        <!-- End of top mid section -->
 
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        <section class="bottom-mid">
+          <section class="text-box">
+            <h2>Services</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm 
+              nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </section>
 
+          <section class="text-box">
+            <h2>Product</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm 
+              nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </section>
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+          <section class="text-box">
+            <h2>Vision</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm 
+              nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </section>
+        </section>
+      </section>
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      <!-- End of bottom mid section-->
+      <!-- End of main container -->
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+      <address>
+        <p class="not-h2">Contact</p>
+        <p>123 Way 456 Street
+          <br>Somewhere, USA
+          <br>
+          <br>
+          <a href="tel:1-888-888-8888" class="contact-info">1 (888) 888-8888</a>
+          <br>
+          <br>
+          <a href="mailto:sales@greatidea.io" class="contact-info">sales@greatidea.io</a>
+        </p>
+      </address>
 
-  Copyright Great Idea! 2018
-  
+      <!-- End of address section -->
+      
+      <footer>
+        <p>Copyright Great Idea! 2018</p>
+      </footer>
+    </div>
   </body>
 </html>
