--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -23,8 +23,8 @@
           <a href="index.html">Features</a>
           <a href="index.html">About</a>
           <a href="index.html">Contact</a>
-          <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
         </nav>
+        <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
       </header>
 
       <!-- End of Header -->
@@ -35,7 +35,7 @@
             <br>On
             <br>Demand
           </h1>
-          <div>Get Started</div>
+          <div class="button">Get Started</div>
         </section>
 
         <div class="top-img">
@@ -107,7 +107,7 @@
       </address>
 
       <!-- End of address section -->
-      
+
       <footer>
         <p>Copyright Great Idea! 2018</p>
       </footer>
